Token balance formatting

--- a/src/index.css
+++ b/src/index.css
@@ -106,3 +106,8 @@ button:focus-visible {
     transform: rotate(360deg);
   }
 }
+
+.ellipsisIt {
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
